--- a/SortedStore_api/package.json
+++ b/SortedStore_api/package.json
@@ -5,7 +5,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "prisma": "^5.22.0",
+    "express-session": "^1.18.1",
+    "password-validator": "^5.3.0",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "prisma": "^5.22.0"
   }
 }
