--- a/SortedStore_api/package.json
+++ b/SortedStore_api/package.json
@@ -1,10 +1,18 @@
 {
+  "name": "sortedstore",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "dev": "node server.js"
+  },
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
+    "password-validator": "^5.3.0",
     "prisma": "^5.22.0",
     "sqlite3": "^5.1.7"
   }
